# Rustyvisor_REPAIRED

./: Cargo.toml  LICENSE  README.md  build.sh
dmesg_logger/: Cargo.toml
dmesg_logger/src/: lib.rs
hypervisor/: Cargo.toml
hypervisor/src/: debug.rs  hypercall_handler.rs  interrupt_controller.rs  interrupts.rs  isr.rs  lib.rs  msr.rs  panic.rs  register_state.rs  segmentation.rs  vcpu.rs  vmcs.rs  vmcs_dump.rs  vmcs_fields.rs  vmexit_handlers.rs  vmexit_reasons.rs  vmx.rs
hypervisor_abi/: Cargo.toml
hypervisor_abi/src/: lib.rs
linux/: Cargo.toml  Makefile  build.sh
linux/src/: host_entrypoint.S  isr.S  lib.rs  linux_module.c
pcuart/: Cargo.toml
pcuart/src/: lib.rs  logger.rs
rustyvctl/: Cargo.toml  old.build.rs
rustyvctl/src/: main.rs
scripts/: bochs_deploy.sh  ci-install.sh  ci.sh  deploy_wsl.ps1  git_pre_commit_hook.sh  make_uefi_test_fs.sh  remove-kvm.sh
uefi/: Cargo.toml  bochsrc.txt  build.rs  build.sh
uefi/src/: host_entrypoint.S  isr.S  main.rs
