[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Ian Kronquist <iankronquist@gmail.com>"]
edition = "2018"
#build = "build.rs"


[dependencies]
spin = { version = "0.9" }
log = { default-features = false, version = "0.4" }
pcuart = { path= "../pcuart"}
hypervisor_abi = { path= "../hypervisor_abi"}
dmesg_logger = { path = "../dmesg_logger" }
#x86 = "0.39.0"
x86 = { path = "rust-x86-ST" }


[features]
runtime_tests = []

[lib]
#crate_type = ["staticlib"]
